# CalicoDB

./: .clang-format  .dockerignore  .gitignore  AUTHORS.md  CMakeLists.txt  DESIGN.md  Dockerfile  Doxyfile  LICENSE  LICENSE.md  README.md
benchmarks/: CMakeLists.txt  bench.h  bench_calico.cpp  bench_calicodb.cpp  bench_sqlite3.cpp  benchmark.h
fuzz/: CMakeLists.txt  db_fuzzer.cpp  fuzzer.h  main.cpp  map_fuzzer.cpp
fuzzers/: CMakeLists.txt  db_bucket_fuzzer.cpp  db_format_fuzzer.cpp  db_fuzzer.cpp  db_model_fuzzer.cpp  fuzzer.h  main.cpp
src/: CMakeLists.txt  alloc.cpp  alloc.h  allocator.cpp  allocator.h  bucket.cpp  bucket_impl.cpp  bucket_impl.h  buffer.h  bufmgr.cpp  bufmgr.h  cache.h  config.cpp  config_internal.h  crc.h  cursor.cpp  cursor_impl.cpp  cursor_impl.h  db.cpp  db_impl.cpp  db_impl.h  delta.cpp  delta.h  dsl.cpp  dsl.h  encoding.h  env.cpp  env_posix.cpp  env_posix.h  error.cpp  error.h  frames.cpp  frames.h  freelist.cpp  freelist.h  hash_index.cpp  hash_index.h  header.cpp  header.h  internal.h  (+60 more)
src/core/: core.cpp  core.h  database.cpp  database_impl.cpp  database_impl.h  header.h  options.cpp  recovery.cpp  recovery.h  statistics.cpp  transaction.cpp  transaction_log.cpp  transaction_log.h
src/database/: database.cpp  database_impl.cpp  database_impl.h  db.cpp  db_impl.cpp  db_impl.h  recovery.cpp  recovery.h
src/db/: batch.cpp  batch_impl.cpp  batch_impl.h  batch_internal.h  cursor.cpp  cursor_impl.cpp  cursor_impl.h  database.cpp  database_impl.cpp  database_impl.h  error.cpp  header.cpp  header.h  lock_impl.cpp  lock_impl.h  options.cpp  status.cpp
src/file/: file.cpp  file.h  interface.h  system.cpp  system.h
src/page/: cell.cpp  cell.h  delta.cpp  delta.h  deltas.h  file_header.cpp  file_header.h  link.cpp  link.h  node.cpp  node.h  page.cpp  page.h  update.cpp  update.h
src/pager/: basic_pager.cpp  basic_pager.h  cache.h  delta.cpp  delta.h  frame_buffer.cpp  frame_buffer.h  framer.cpp  framer.h  frames.cpp  frames.h  page.h  page_cache.cpp  page_cache.h  pager.cpp  pager.h  registry.cpp  registry.h
src/pool/: buffer_pool.cpp  buffer_pool.h  cache.cpp  cache.h  frame.cpp  frame.h  in_memory.cpp  in_memory.h  interface.h  memory_pool.cpp  memory_pool.h  page_cache.cpp  page_cache.h  pager.cpp  pager.h
src/storage/: directory.cpp  directory.h  disk.cpp  disk.h  file.cpp  file.h  heap.cpp  heap.h  helpers.h  interface.h  io.cpp  io.h  posix_storage.cpp  posix_storage.h  posix_system.cpp  posix_system.h  storage.cpp  system.cpp  system.h
src/store/: disk.cpp  disk.h  heap.cpp  heap.h  helpers.h  system.cpp  system.h
src/temp/: CMakeLists.txt  bplus_tree.cpp  bplus_tree.h  free_list.cpp  free_list.h  header.cpp  header.h  node.cpp  node.h  overflow.cpp  overflow.h  page.h
src/tree/: CMakeLists.txt  bplus_tree.cpp  bplus_tree.h  cursor.cpp  cursor_impl.h  cursor_internal.h  free_list.cpp  free_list.h  header.cpp  header.h  interface.h  internal.cpp  internal.h  iterator.cpp  iterator.h  marker.cpp  marker.h  memory.cpp  memory.h  node.cpp  node.h  node_manager.cpp  node_manager.h  node_pool.cpp  node_pool.h  overflow.cpp  overflow.h  rw_lock.h  tree.cpp  tree.h
src/utils/: assert.h  cache.h  compress.cpp  crc.cpp  crc.h  encoding.h  error.h  expect.h  expected.hpp  header.h  identifier.h  info_log.cpp  info_log.h  layout.h  logger.cpp  logger.h  logging.cpp  logging.h  queue.h  result.h  scratch.cpp  scratch.h  slice.h  status.cpp  system.cpp  system.h  tracker.cpp  tracker.h  types.cpp  types.h  utils.h  worker.h
src/wal/: basic_wal.cpp  basic_wal.h  cleaner.cpp  cleaner.h  cleanup.cpp  cleanup.h  disabled_wal.h  event_queue.h  helpers.cpp  helpers.h  interface.h  iterator.cpp  iterator.h  reader.cpp  reader.h  record.cpp  record.h  segment.cpp  segment.h  wal.cpp  wal.h  wal_manager.cpp  wal_manager.h  wal_reader.cpp  wal_reader.h  wal_record.cpp  wal_record.h  wal_writer.cpp  wal_writer.h  worker.h  writer.cpp  writer.h
test/: CMakeLists.txt  concurrency.cpp  crashes.cpp  stest_db.cpp  test.cpp  test.h  test_bounds.cpp  test_concurrency.cpp  test_corruption.cpp  test_crashes.cpp  test_db.cpp  test_dsl.cpp  test_env.cpp  test_json.cpp  test_node.cpp  test_pager.cpp  test_stest.cpp  test_tree.cpp  test_utils.cpp  test_wal.cpp
test/benchmark/: CMakeLists.txt  benchmark.cpp  main.cpp
test/benchmarks/: CMakeLists.txt  bench.h  bench_calico.cpp  bench_calicodb.cpp  benchmark.h
test/debug/: concurrency.cpp
test/doc_tests/: CMakeLists.txt  check_refs.py  gen_examples.py  run_examples.sh
test/fuzz/: CMakeLists.txt  corpus.cpp  db_mods.cpp  db_xact.cpp  fuzz.cpp  fuzz.h  fuzz_db_modify.cpp  fuzz_db_xact.cpp  fuzz_mem_ops.cpp  fuzz_node_ops.cpp  fuzz_ops.cpp  fuzz_wal.cpp  fuzz_wal_reader.cpp  fuzzers.cpp  fuzzers.h  main.cpp  validators.cpp  validators.h
test/fuzzers/: CMakeLists.txt  db_fuzzer.cpp  fuzzer.cpp  fuzzer.h  main.cpp  map_fuzzer.cpp  map_fuzzer.h  ops_fuzzer.cpp  ops_fuzzer.h
test/integration/: CMakeLists.txt  integration.cpp  integration.h  test_logging.cpp  test_recovery.cpp  test_rw.cpp
test/recovery/: CMakeLists.txt  fail.cpp  recover.cpp  run.sh
test/tests/: CMakeLists.txt  common.cpp  common.h  concurrency.cpp  crashes.cpp  operations.cpp  test.cpp
test/tools/: CMakeLists.txt  env_helpers.cpp  env_helpers.h  fakes.cpp  fakes.h  harness.cpp  harness.h  model.cpp  model.h  random.cpp  random.h  tools.cpp  tools.h  validation.cpp  validation.h
test/unit/: CMakeLists.txt  test_cache.cpp  test_cursor.cpp  test_db.cpp  test_file.cpp  test_page.cpp  test_pool.cpp  test_tree.cpp  test_utils.cpp  test_wal.cpp  unit.h
test/unit_tests/: CMakeLists.txt  test_cache.cpp  test_core.cpp  test_db.cpp  test_env.cpp  test_file.cpp  test_impl.cpp  test_index.cpp  test_layout.cpp  test_page.cpp  test_pager.cpp  test_pool.cpp  test_recovery.cpp  test_storage.cpp  test_store.cpp  test_table.cpp  test_temp.cpp  test_tree.cpp  test_utils.cpp  test_wal.cpp  test_xact.cpp  unit.cpp  (+3 more)
tools/: CMakeLists.txt  tools.cpp  tools.h
utils/: CMakeLists.txt  common.h  debug.cpp  fake_env.cpp  fake_env.h  model.cpp  model.h
(+100 files in other folders)
